# yews

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  Makefile  README.md  README.rst  appveyor.yml  hubconf.py  meta.yaml  pyproject.toml  pytest.ini  setup.cfg  setup.py  torch_rbp_install.rst
anaconda/: Makefile  meta.yaml
docs/source/: conf.py  dataset.rst  index.rst  models.rst  train.rst  transforms.rst
docs/source/_static/css/: yews_theme.css
examples/: data  deployment.py  deployment_mariana.py  detection.py  ok_transfer.py  prepare_dataset_from_filenames.py  rbp.py  rbp_auto.py  scsn.training.py  scsn_polarity_cnn.training.py  scsn_polarity_lstm_training.py  taiwan20092010_cpic.training.py  taiwan_focal_mechanism.training.py  train_cnn.py  training.py  wenchuan.py  wenchuan.training.py  wenchuan_convmixer.training.py  wenchuan_cpic.training.py
logo/: logo.graffle
src/yews/: __init__.py
src/yews/cpic/: detection.py  integration.py  utils.py
src/yews/datasets/: __init__.py  base.py  packaged_datasets.py  sac.py.bak  utils.py
src/yews/models/: __init__.py  convmixer.py  cpic.py  cpic_original.py  focal_mechanism.py  polarity.py
src/yews/models/layers/: __init__.py  classifier.py  conv_norm_act.py
src/yews/train/: __init__.py  functional.py  train.py  train.py.bak
src/yews/transforms/: __init__.py  base.py  functional.py  transforms.py
src/yews/utils/: __init__.py  comm.py  launch.py  logging.py
src/yews/utils/logging_config/: colored.json  normal.ini  normal.json
tests/: test_datasets.py  test_datasets_utils.py  test_models.py  test_train_functional.py  test_transforms.py
tests/assets/: array.npy  test.tar.bz2
tests/assets/array/: data.npy
tests/assets/array_folder/: samples.npy  targets.npy
tests/assets/folder/a/0/: class_a.xxx.npy
tests/assets/sac/: E.sac  N.sac  Z.sac
yews/: __about__.py  __init__.py
yews/cpic/: detection.py  picking.py  utils.py
yews/dataset/: __init__.py  array.py  classification.py  folder.py
yews/datasets/: __init__.py  base.py  classification.py  dir.py  dirs.py  file.py  files.py  packaged_datasets.py  sac.py  utils.py  wenchuan.py
yews/deploy/: __init__.py  detection.py  picking.py  utils.py
yews/detection/: __init__.py  utils.py
yews/models/: __init__.py  cpic.py
yews/train/: functional.py  train.py  utils.py
yews/transforms/: __init__.py  base.py  extra.py  functional.py  transforms.py
yews/utils/: __init__.py  io.py  path.py
