[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | example
  | experimental
)/
'''

[tool.isort]
src_paths = ["src", "test"]
multi_line_output = 3
include_trailing_comma = true
skip = [
	"./datasets",
	"docs",
]
skip_glob = [
	"*/__init__.py",
]
known_third_party = [
	"fvcore",
	"matplotlib",
	"cv2",
	"torch",
	"torchvision",
	"PIL",
	"pycocotools",
	"termcolor",
	"tabulate",
	"tqdm",
	"scipy",
	"psutil",
	"pkg_resources",
	"caffe2",
	"onnx",
	"black",
	"isort",
]
no_lines_before = [
 "STDLIB",
 "THIRDPARTY",
]

[tool.pytest.ini_options]
testpaths = [
	"test",
]
markers = [
	"smoke: quick smoke tests.",
	"gpus: tests needs gpus.",
	"weights: pretrained weight files.",
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pyright]
include = [
	"tivision",
	"references",
]
exclude = [
	"**/__pycache__",
]
pythonVersion = "3.8"
pythonPlatform = "Linux"
