# Reference: https://github.com/pyscaffold/pyscaffold/blob/master/setup.cfg

[metadata]
# package basics
name = yews
version = 0.0.4
description = Deep Learning toolbox for seismic waveform processing.
long_description = file: README.rst
long_description_content_type = test/x-rst
url = https://github.com/lijunzh/yews
# author
author = Lijun Zhu
author_email = gatechzhu@gmail.com
# license
license = Apache 2.0
license_file = LICENSE
# development
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.6
zip_safe = True
packages = find:
setup_requires =
    pytest-runner
    numpy
    scipy
    torch>=1.0.0
test_require =
    pytest
install_requires =
    numpy
    torch>=1.0.0

[options.packages.find]
exclude =
    tests
    examples

[options.extras_require]
all =
    scipy
testing =
    pytest
    pytest-cov

[tool:pytest]
# options for pytest:
addopts =
    --cov-config .coveragerc --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
testpaths =
    tests

[aliases]
test = pytest
dists = sdist bdist_wheel

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
