# Reference: https://github.com/pyscaffold/pyscaffold/blob/master/setup.cfg

[metadata]
# package basics
name = yews
version = 0.0.6
description = Deep Learning toolbox for seismic waveform processing.
author = Lijun Zhu
author_email = gatechzhu@gmail.com
license = Apache 2.0
license_file = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/lijunzh/yews
project-urls =
	Documentation = https://yews.info/
# development
platforms = any
classifiers =
	Development Status :: 2 - Pre-Alpha
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Artificial Intelligence
	Topic :: Scientific/Engineering :: Physics
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Operating System :: Unix
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows

[options]
zip_safe = True
packages = find:
include_package_data = True
package_dir =
	=src
setup_requires =
	pytest-runner
install_requires =
	numpy>=1.16
	scipy>=1.2
	torch>=1.0
python_requires = >=3.6

[options.packages.find]
where = src
exclude =
	tests
	examples

[options.extras_require]
all =
	obspy
	tqdm
testing =
	pytest
	pytest-cov
	obspy

[test]
addopts = --verbose
extras = True

[tool:pytest]
# options for pytest:
addopts =
	--cov-config .coveragerc --cov-report term-missing
	--verbose
norecursedirs =
	dist
	build
	.tox
testpaths = tests

[aliases]
test = pytest
dists = sdist bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
exclude =
	.tox
	build
	dist
	.eggs
	docs/conf.py
